components/default/jellyfin/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app jellyfin
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
  annotations:
    gethomepage.dev/href: "https://jellyfin.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/jellyfin.png
spec:
  parentRefs:
    - name: envoy-media
      namespace: network
      sectionName: https
  hostnames: ["jellyfin.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: *app
          port: 8096
